# nexus-hunter

./: .gitignore  .gitleaksignore  Makefile  NEXUS_HUNTER_COMPREHENSIVE_TECHNICAL_SYNOPSIS.md  PROJECT_SUMMARY.md  README.md  START_NEXUS_HUNTER.md  batch_add_payload_detection.py  demo_scan_results.json  docker-compose.yml
backend/: main.py  migrate_targets_table.py  nexus_hunter.db-shm  nexus_settings.json  pyproject.toml  requirements.txt  simple_main.py  test_gemini_integration.py
backend/agents/: base.py  exploit_agent.py  recon_agent.py  report_agent.py  vulnerability_detection_helper.py
backend/agents/agentic_ai/: __init__.py  ai_brain.py  background_service.py  controller.py  enhanced_scan_orchestrator.py
backend/agents/exploitation_agents/: __init__.py  advanced_xss_agent.py  batch_fix_agents.py  business_logic_agent.py  business_logic_agent_fixed_batch.py  business_logic_agent_old.py  command_injection_agent_fixed_batch.py  deserialization_agent.py  enhanced_command_injection_agent.py  enhanced_command_injection_agent_old.py  file_upload_agent.py  file_upload_agent_fixed_batch.py  file_upload_agent_old.py  guaranteed_vulns_agent.py  ldap_injection_agent.py  lfi_agent.py  lfi_agent_fixed_batch.py  lfi_agent_old.py  nosql_agent_fixed_batch.py  nosql_injection_agent.py  nosql_injection_agent_old.py  rce_agent.py  sql_injection_agent.py  sql_injection_agent_fixed.py  sql_injection_agent_old_hardcoded.py  sqlmap_agent.py  ssrf_agent.py  ssrf_agent_fixed_batch.py  ssrf_agent_old.py  template_agent_fixed_batch.py  template_injection_agent.py  template_injection_agent_old.py  xss_agent.py  xss_agent_fixed.py  xss_agent_old_hardcoded.py  xxe_agent.py  xxe_agent_fixed_batch.py  xxe_agent_old.py
backend/agents/prompt_engineering/: __init__.py  cybersecurity_llm.py
backend/agents/reconnaissance_agents/: __init__.py  amass_agent.py  assetfinder_agent.py  dnstwist_agent.py  gau_agent.py  github_agent.py  httpx_agent.py  katana_agent.py  masscan_agent.py  naabu_agent.py  osint_agent.py  paramspider_agent.py  sslmate_agent.py  subfinder_agent.py
backend/agents/reporting_agents/: __init__.py  disclosure_report_agent.py  executive_report_agent.py  html_report_generator.py  json_report_generator.py  pdf_report_generator.py  technical_report_agent.py  vulnerability_report_agent.py
backend/api/: routes.py
backend/core/: auto_scan_scheduler.py  concurrent_scan_manager.py  config.py  database.py  notification_system.py  redis_client.py  settings_persistence.py  stuck_scan_monitor.py  system_initializer.py  websocket_manager.py
backend/models/: base.py  scan.py
backend/utils/: cvss_calculator.py  severity_reference.py
frontend/: index.html  (+4 more)
(+102 files in other folders)
