[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-hunter"
version = "1.0.0"
description = "Autonomous Bug Bounty Intelligence Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Nexus Security Research", email = "research@nexus-sec.io"},
]
keywords = ["security", "bug-bounty", "penetration-testing", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.1.0",
    # Security scanning tools
    "python-nmap>=0.7.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    # AI/ML for intelligent analysis
    "openai>=1.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/nexus-security/nexus-hunter"
Documentation = "https://docs.nexus-hunter.io"
Repository = "https://github.com/nexus-security/nexus-hunter.git"
Issues = "https://github.com/nexus-security/nexus-hunter/issues"

[project.scripts]
nexus-hunter = "nexus_hunter.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto" 